--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Binaries for programs and plugins
 *.exe
 *.exe~
+*.o
 *.dll
 *.so
 *.dylib
@@ -19,3 +20,4 @@
 
 # Go workspace file
 go.work
+.idea
